--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="static/bitbug_favicon.ico" />
-    <title>front-end</title>
+    <title>AcademicScholar</title>
   </head>
   <body>
     <div id="app"></div>
